NetBSD Problem Report #50420

From riz@NetBSD.org  Wed Nov 11 15:35:08 2015
Return-Path: <riz@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 79F70A64EF
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 11 Nov 2015 15:35:08 +0000 (UTC)
Message-Id: <20151111153506.68915A0A0F@armbulk2.NetBSD.org>
Date: Wed, 11 Nov 2015 15:35:06 +0000 (UTC)
From: riz@armbulk2.NetBSD.org
Reply-To: riz@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: curcpu()->ci_pmap_cur != pm || pm->pm_pai[0].pai_asid == curcpu()->ci_pmap_asid_cur" failed
X-Send-Pr-Version: 3.95

>Number:         50420
>Category:       port-arm
>Synopsis:       KASSERTMSG in arm32/pmap.c triggered
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Nov 11 15:40:00 +0000 2015
>Closed-Date:    Thu May 25 05:12:47 +0000 2017
>Last-Modified:  Thu May 25 05:12:47 +0000 2017
>Originator:     Jeff Rizzo
>Release:        NetBSD 7.99.21
>Organization:
>Environment:
System: NetBSD armbulk1.NetBSD.org 7.0 NetBSD 7.99.21 (JETSONTK1) #1: Tue Nov 10 12:23:08 PST 2015 riz@slash.lan:/build/arm/obj/sys/arch/evbarm/compile/JETSONTK1 evbarm
Architecture: earmv7hf
Machine: evbarm
>Description:
	While building binary packages for earmv6hf (in a chroot), this
	assertion triggered.  I was able to get into DDB and gather info,
	but I wasn't sure what would be useful beyond a stack trace.
	This was on a Jetson TK1 (Tegra K1) board.  (The
	TEGRAK1_PMAP_WORKAROUND option was in place, but no other
	pmap-affecting stuff I'm aware of)


panic: kernel diagnostic assertion "curcpu()->ci_pmap_cur != pm || pm->pm_pai[0]
.pai_asid == curcpu()->ci_pmap_asid_cur" failed: file "/src/src/sys/arch/arm/arm
32/pmap.c", line 5006 pmap/asid 0x81511334/0 != cpu0 cur pmap/asid 0x81511334/0x
54
db{0}>  bt
0xabd03b9c: netbsd:vpanic+0xc
0xabd03bb4: netbsd:__udivmoddi4
0xabd03bfc: netbsd:pmap_update+0x160
0xabd03c4c: netbsd:uvm_km_kmem_alloc+0x108
0xabd03c64: netbsd:pool_page_alloc+0x3c
0xabd03ca4: netbsd:pool_grow+0x38
0xabd03cbc: netbsd:pool_catchup+0x18
0xabd03cf4: netbsd:pool_get+0x36c
0xabd03d3c: netbsd:pool_cache_get_slow+0x224
0xabd03d74: netbsd:pool_cache_get_paddr+0x22c
0xabd03db4: netbsd:re_newbuf+0x260
0xabd03dfc: netbsd:re_rxeof+0x1a0
0xabd03e24: netbsd:re_intr+0xfc
0xabd03e54: netbsd:tegra_pcie_intr+0x15c
0xabd03e7c: netbsd:pic_dispatch+0x58
0xabd03edc: netbsd:armgic_irq_handler+0xd8
0xabd03f5c: netbsd:irq_entry+0x68
0xabd03f84: netbsd:pmap_activate+0x80
0xabd03fac: netbsd:lwp_startup+0xa8
Bad frame pointer: 0xa65cfd14
db{0}> 

>How-To-Repeat:
	Bulk building packages.
>Fix:
	None given.

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50420 CVS commit: src/sys/kern
Date: Thu, 12 Nov 2015 10:47:30 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Thu Nov 12 10:47:30 UTC 2015

 Modified Files:
 	src/sys/kern: kern_lwp.c

 Log Message:
 Drop to spl0 after the pmap_activate call.  Should address

 PR port-arm/50420: curcpu()->ci_pmap_cur != pm || pm->pm_pai[0].pai_asid == curcpu()->ci_pmap_asid_cur" failed

 Discussed with matt@ and rmind@


 To generate a diff of this commit:
 cvs rdiff -u -r1.180 -r1.181 src/sys/kern/kern_lwp.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50420 CVS commit: src/sys/arch/arm/arm32
Date: Fri, 13 Nov 2015 08:04:21 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Fri Nov 13 08:04:21 UTC 2015

 Modified Files:
 	src/sys/arch/arm/arm32: pmap.c

 Log Message:
 Tweak the KASSERTs in pmap_update in the ARM_MMU_EXTENDED case - Lazy
 updating is not done on the kernel pmap.

 PR port-arm/50420: curcpu()->ci_pmap_cur != pm || pm->pm_pai[0].pai_asid == curcpu()->ci_pmap_asid_cur" failed


 To generate a diff of this commit:
 cvs rdiff -u -r1.329 -r1.330 src/sys/arch/arm/arm32/pmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 30 May 2016 04:14:55 +0000
State-Changed-Why:
Is this fixed?


State-Changed-From-To: feedback->open
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 10 Aug 2016 16:01:54 +0000
State-Changed-Why:
fix address


State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 10 Aug 2016 16:02:06 +0000
State-Changed-Why:
try again: is this fixed?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 25 May 2017 05:12:47 +0000
State-Changed-Why:
Feedback timeout.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.